fix height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
 .App {
   text-align: center;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   place-content: space-around;
